import submodule merry & recode

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "merry"]
 	path = merry
 	url = https://github.com/oneoo/merry.git
+[submodule "luajit"]
+	path = luajit
+	url = https://github.com/agentzh/luajit2.git
