--- a/lua-libs/lzlib/Makefile
+++ b/lua-libs/lzlib/Makefile
@@ -11,16 +11,18 @@ LUAINC= $(LUA)/include
 LUALIB= $(LUA)/lib
 LUABIN= $(LUA)/bin
 
-ZLIB=../zlib-1.2.3
+ZLIB=./
+
+CC = gcc
 
 # no need to change anything below here
 CFLAGS= $(INCS) $(DEFS) $(WARN) -O3 -fPIC
 WARN= -Werror -Wall -pedantic #-ansi
-INCS= -I$(LUAINC) -I/usr/local/include -I/usr/local/include/luajit-2.0 -I/usr/local/include/luajit-2.1 -I$(ZLIB)
-LIBS= -L$(ZLIB) -lz -L$(LUALIB) -L$(LUABIN) -llua
+INCS= -I$(LUAINC) -I/usr/local/include -I/usr/local/include/luajit-2.0 -I/usr/local/include/luajit-2.1 -I$(ZLIB) $(LIBLUA)
+LIBS= -L$(ZLIB) -lz $(LIBLUA) -llua
 
 ifneq (,$(findstring luajit,$(LIBLUA)))
-LIBS= -L$(ZLIB) -lz -L$(LUALIB) -L$(LUABIN) -lluajit-5.1
+LIBS= -L$(ZLIB) -lz $(LIBLUA) -lluajit-5.1
 endif
 
 MYLIB=lzlib
