--- a/lua-libs/lua-cjson-2.1.0/Makefile
+++ b/lua-libs/lua-cjson-2.1.0/Makefile
@@ -19,9 +19,9 @@ CFLAGS =            -O3 -Wall -pedantic -DNDEBUG
 CJSON_CFLAGS =      -fpic
 CJSON_LDFLAGS =     -O3 -shared -llua
 ifneq (,$(findstring luajit,$(LIBLUA)))
-CJSON_LDFLAGS =     -O3 -shared -lluajit-5.1
+CJSON_LDFLAGS =     -O3 -shared $(LIBLUA)
 endif
-LUA_INCLUDE_DIR =   $(PREFIX)/include
+LUA_INCLUDE_DIR =   $(PREFIX)/include $(LIBLUA)
 LUA_CMODULE_DIR =   $(PREFIX)/lib/lua/$(LUA_VERSION)
 LUA_MODULE_DIR =    $(PREFIX)/share/lua/$(LUA_VERSION)
 LUA_BIN_DIR =       $(PREFIX)/bin
