fix Makefile in lua-cmsgpack module

--- a/lua-libs/lua-cmsgpack/Makefile
+++ b/lua-libs/lua-cmsgpack/Makefile
@@ -43,7 +43,7 @@ OBJS =              lua_cmsgpack.o
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CC) $(CMSGPACK_LDFLAGS) -o $@ $(OBJS) $(LIBLUA)
+	$(CC) $(CMSGPACK_LDFLAGS) $(LIBLUA) -o $@ $(OBJS)
 
 install: $(TARGET)
 	mkdir -p $(DESTDIR)/$(LUA_CMODULE_DIR)
