--- a/lua-libs/lzlib/Makefile
+++ b/lua-libs/lzlib/Makefile
@@ -17,7 +17,7 @@ CC = gcc
 
 # no need to change anything below here
 CFLAGS= $(INCS) $(DEFS) $(WARN) -O3 -fPIC
-WARN= -Werror -Wall -pedantic #-ansi
+WARN= -pedantic #-ansi
 INCS= -I$(LUAINC) -I/usr/local/include -I/usr/local/include/luajit-2.0 -I/usr/local/include/luajit-2.1 -I$(ZLIB) $(LIBLUA)
 LIBS= -L$(ZLIB) -lz $(LIBLUA) -llua
 
