fix Makefile in luabit

--- a/lua-libs/LuaBitOp-1.0.2/Makefile
+++ b/lua-libs/LuaBitOp-1.0.2/Makefile
@@ -6,7 +6,7 @@
 INCLUDES= -I/usr/local/include -I/usr/local/include/luajit-2.0 -I/usr/local/include/luajit-2.1
 
 ifneq ($(LIBLUA),)
-INCLUDES=""
+INCLUDES=
 endif
 
 DEFINES=
